--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ url                      : "" #"https://libresolar.github.io" #"http://127.0.0.1
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
-logourl                  : "libresolar_logo_small.png"
+logourl                  : "/images/libresolar_logo_small.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
